[package]

name = "timely"
version = "0.2.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "A low-latency data-parallel dataflow system in Rust"

# These URLs point to more information about the repository
documentation = "https://frankmcsherry.github.com/timely-dataflow"
homepage = "https://github.com/frankmcsherry/timely-dataflow"
repository = "https://github.com/frankmcsherry/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[features]
default=[]
logging=[]
sleeping=["timely_communication/sleeping"]
verbose=[]

[dependencies]
abomonation="0.4.4"
timely_sort="0.1.6"
timely_communication={path = "communication/"}
byteorder="0.4.2"
time="0.1.34"

[dev-dependencies]
getopts="0.2.14"
rand="0.3.13"

[[example]]
name = "sleep"
required-features = ["sleeping"]

[[example]]
name = "barrier"

[[example]]
name = "bfs"

[[example]]
name = "broadcast"

[[example]]
name = "capture_recv"

[[example]]
name = "capture_send"

[[example]]
name = "distinct"

[[example]]
name = "hello"

[[example]]
name = "pingpong"

[[example]]
name = "rc"

[[example]]
name = "simple"

[[example]]
name = "unionfind"

[[example]]
name = "unordered_input"

