[package]
name = "timely_communication"
version = "0.1.7"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "Communication layer for timely dataflow"

# These URLs point to more information about the repository
documentation = "https://frankmcsherry.github.com/timely-dataflow"
homepage = "https://github.com/frankmcsherry/timely-dataflow"
repository = "https://github.com/frankmcsherry/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[features]
default=[] # ["logging"]
logging=["timely_logging/logging"]

[dependencies]
abomonation="0.4.4"
byteorder="0.4.2"
getopts="0.2.14"
time="0.1.34"
rmp-serde = "0.12.2"
serde = "0.9"
serde_derive = "0.9"
timely_logging = { path = "../logging" }
